// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`WalletView it renders correctly 1`] = `
.c2 {
  min-width: 0;
  box-sizing: border-box;
  border-radius: 8px;
  padding: 16px;
  margin-bottom: 8px;
  color: purple;
  background-color: #5E26FF;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 300px;
  height: 300px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  box-shadow: 0 0.7px 2.2px -8px rgba(0,0,0,0.18),0 1.7px 5.4px rgba(0,0,0,0.129),0 3.1px 10.1px rgba(0,0,0,0.107),0 5.6px 18.1px rgba(0,0,0,0.09),0 10.4px 33.8px rgba(0,0,0,0.073),0 25px 81px rgba(0,0,0,0.051);
}

.c3 {
  min-width: 0;
  box-sizing: border-box;
  color: #E0D7FE;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
}

.c4 {
  min-width: 0;
  box-sizing: border-box;
  border-width: 0.1875rem;
  border-radius: 8px;
  border-style: solid;
  margin-right: 16px;
  color: #E0D7FE;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 48px;
  height: 48px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c7 {
  min-width: 0;
  box-sizing: border-box;
  color: #E0D7FE;
}

.c9 {
  min-width: 0;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c17 {
  min-width: 0;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c19 {
  min-width: 0;
  box-sizing: border-box;
  border: 1px solid;
  border-radius: 8px;
  padding: 16px;
  background-color: transparent;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 300px;
  min-height: 300px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c20 {
  min-width: 0;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c24 {
  min-width: 0;
  box-sizing: border-box;
  width: 8px;
}

.c26 {
  min-width: 0;
  box-sizing: border-box;
  padding-top: 24px;
  padding-bottom: 24px;
  overflow: hidden;
}

.c29 {
  min-width: 0;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c33 {
  min-width: 0;
  box-sizing: border-box;
  border: none;
  max-width: 800px;
  width: 100%;
}

.c34 {
  min-width: 0;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c35 {
  min-width: 0;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
}

.c36 {
  min-width: 0;
  box-sizing: border-box;
  border-width: 0.1875rem;
  border-radius: 8px;
  border-style: solid;
  margin-right: 16px;
  color: #5E26FF;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 48px;
  height: 48px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c5 {
  font-family: "RT-Alias-Medium","system-ui","Segoe UI","Roboto",Helvetica;
  font-weight: 700;
  font-size: 1.5rem;
}

.c18 {
  cursor: pointer;
  border: 1px solid #E0D7FE;
  background-color: transparent;
  border-color: #E0D7FE;
  color: #E0D7FE;
  font-size: 1.125rem;
  -webkit-transition: 0.18s ease-in-out;
  transition: 0.18s ease-in-out;
  border-radius: 4px;
  padding: 8px;
  padding-top: 8px;
  padding-bottom: 8px;
  padding-left: 16px;
  padding-right: 16px;
  height: -webkit-max-content;
  height: -moz-max-content;
  height: max-content;
  border-width: 1px;
  border-radius: 4px;
}

.c18:hover {
  opacity: 0.8;
}

.c30 {
  cursor: pointer;
  border: 1px solid #1AD08F;
  background-color: #1AD08F;
  border-color: #1AD08F;
  color: #08442F;
  font-size: 1.125rem;
  -webkit-transition: 0.18s ease-in-out;
  transition: 0.18s ease-in-out;
  border-radius: 4px;
  padding-top: 8px;
  padding-bottom: 8px;
  padding-left: 16px;
  padding-right: 16px;
  height: 48px;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  border-width: 1px;
  border-radius: 4px;
}

.c30:hover {
  opacity: 0.8;
}

.c38 {
  cursor: pointer;
  border: 1px solid #262626;
  background-color: transparent;
  border-color: #262626;
  color: #262626;
  font-size: 1.125rem;
  -webkit-transition: 0.18s ease-in-out;
  transition: 0.18s ease-in-out;
  border-radius: 4px;
  padding-top: 8px;
  padding-bottom: 8px;
  padding-left: 16px;
  padding-right: 16px;
  height: 48px;
  border-width: 1px;
  border-radius: 4px;
}

.c38:hover {
  opacity: 0.8;
}

.c13 {
  width: 24;
  height: 24;
}

.c44 {
  width: 34;
  height: 34;
}

.c10 {
  font-size: 1.5rem;
  font-weight: 400;
  line-height: 1.2;
  font-family: RT-Alias-Grotesk;
  overflow: hidden;
  margin: 0;
}

.c27 {
  color: #262626;
  font-size: 3rem;
  font-weight: 700;
  line-height: 1;
  font-family: RT-Alias-Grotesk;
  margin: 0;
}

.c6 {
  font-size: 1.125rem;
  font-weight: 400;
  line-height: 1.4;
  font-family: RT-Alias-Grotesk;
}

.c8 {
  font-size: 1.125rem;
  font-weight: 400;
  line-height: 1.4;
  font-family: RT-Alias-Grotesk;
  margin: 0;
}

.c37 {
  color: #5E26FF;
  font-size: 1.125rem;
  font-weight: 400;
  line-height: 1.4;
  font-family: RT-Alias-Grotesk;
}

.c48 {
  color: #262626;
  font-size: 1.25rem;
  font-weight: 400;
  line-height: 1.4;
  font-family: RT-Alias-Grotesk;
  margin: 0;
}

.c50 {
  color: #666666;
  font-size: 1.125rem;
  font-weight: 400;
  line-height: 1.4;
  font-family: RT-Alias-Grotesk;
  margin: 0;
}

.c54 {
  color: #262626;
  font-size: 1.125rem;
  font-weight: 400;
  line-height: 1.4;
  font-family: RT-Alias-Grotesk;
  margin: 0;
}

.c55 {
  color: #666666;
  font-size: 1.125rem;
  font-weight: 400;
  line-height: 1.4;
  font-family: RT-Alias-Grotesk;
  display: none;
  margin: 0;
  margin-bottom: 0;
}

.c58 {
  color: #5E26FF;
  font-size: 1.125rem;
  font-weight: 400;
  line-height: 1.4;
  font-family: RT-Alias-Grotesk;
  text-align: center;
  width: 100%;
}

.c15 {
  color: #E0D7FE;
  font-size: 1.125rem;
  font-weight: 400;
  line-height: 1;
  font-family: RT-Alias-Grotesk;
  margin: 0;
  margin-top: 0;
  margin-left: 4px;
}

.c21 {
  font-size: 1.125rem;
  font-weight: 400;
  line-height: 1;
  font-family: RT-Alias-Grotesk;
  margin: 0;
}

.c22 {
  color: #000;
  font-size: 1.125rem;
  font-weight: 400;
  line-height: 1;
  font-family: RT-Alias-Grotesk;
  margin: 0;
}

.c25 {
  color: #666666;
  font-size: 1.125rem;
  font-weight: 400;
  line-height: 1;
  font-family: RT-Alias-Grotesk;
  margin: 0;
}

.c47 {
  color: #262626;
  font-size: 1.125rem;
  font-weight: 400;
  line-height: 1;
  font-family: RT-Alias-Grotesk;
  margin: 0;
  margin-top: 0;
  margin-bottom: 0;
}

.c12 {
  cursor: pointer;
  border: 1px solid #1AD08F;
  background-color: #1AD08F;
  border-color: #1AD08F;
  color: #08442F;
  font-size: 1.125rem;
  -webkit-transition: 0.18s ease-in-out;
  transition: 0.18s ease-in-out;
  border-radius: 4px;
  margin-left: 8px;
  padding-top: 8px;
  padding-bottom: 8px;
  padding-left: 16px;
  padding-right: 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 48px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-width: 1px;
  border-radius: 4px;
  height: auto;
  opacity: 1 !important;
  border: 0;
  background: transparent;
  padding: 0;
  outline: none;
}

.c12:hover {
  opacity: 0.8;
}

.c14 {
  -webkit-transition: 0.24s ease-in-out;
  transition: 0.24s ease-in-out;
}

.c11:hover .c14 {
  -webkit-transform: scale(1.25);
  -ms-transform: scale(1.25);
  transform: scale(1.25);
}

.c16 {
  -webkit-transition: 0.18s ease-in;
  transition: 0.18s ease-in;
  opacity: 0;
}

.c11:hover .c16 {
  opacity: 1;
}

.c23:hover {
  cursor: pointer;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c28 {
  word-wrap: break-word;
}

.c40 {
  list-style: none;
  margin: 0;
  padding: 0;
}

.c42 {
  list-style: none;
  margin: 0;
  padding: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c45 {
  list-style: none;
  margin: 0;
  padding: 0;
  margin-left: 8px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c51 {
  list-style: none;
  margin: 0;
  padding: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  -webkit-box-flex: 999;
  -webkit-flex-grow: 999;
  -ms-flex-positive: 999;
  flex-grow: 999;
}

.c52 {
  list-style: none;
  margin: 0;
  padding: 0;
  margin-left: 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
}

.c56 {
  list-style: none;
  margin: 0;
  padding: 0;
  margin-left: 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.c41 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c43 {
  position: relative;
}

.c46 {
  overflow: hidden;
  width: 160px;
}

.c49 {
  margin-left: 24px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 160px;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c53 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c39 {
  min-width: 0;
  box-sizing: border-box;
  border-radius: 4px;
  border: 1px solid;
  padding: 8px;
  padding-left: 24px;
  padding-right: 24px;
  margin-top: 8px;
  margin-bottom: 8px;
  min-width: -webkit-max-content;
  min-width: -moz-max-content;
  min-width: max-content;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-color: #e8ecf7;
  background-color: #e8ecf7;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-transition: 0.18s ease-in-out;
  transition: 0.18s ease-in-out;
}

.c39:hover {
  cursor: pointer;
  background-color: #EFF3FD;
}

.c57 {
  min-width: 0;
  box-sizing: border-box;
  border-radius: 4px;
  border: 1px solid;
  padding: 8px;
  padding-left: 24px;
  padding-right: 24px;
  margin-top: 8px;
  margin-bottom: 8px;
  min-width: -webkit-max-content;
  min-width: -moz-max-content;
  min-width: max-content;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-color: #e8ecf7;
  background-color: #e8ecf7;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-transition: 0.18s ease-in-out;
  transition: 0.18s ease-in-out;
  cursor: pointer;
}

.c57:hover {
  cursor: pointer;
  background-color: #EFF3FD;
}

.c1 {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  margin: 0.5rem 0.5rem 0.5rem 0.5rem;
}

.c32 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex-basis: 0;
  -ms-flex-preferred-size: 0;
  flex-basis: 0;
  -webkit-box-flex: 999;
  -webkit-flex-grow: 999;
  -ms-flex-positive: 999;
  flex-grow: 999;
  padding-top: 16px;
  margin: 0 0.5rem 0.5rem 0.5rem;
  min-width: 53%;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  max-width: 1440px;
  margin: 0 auto;
}

.c31 {
  cursor: pointer;
  border: 1px solid #262626;
  background-color: transparent;
  border-color: #262626;
  color: #262626;
  font-size: 1.125rem;
  -webkit-transition: 0.18s ease-in-out;
  transition: 0.18s ease-in-out;
  border-radius: 4px;
  margin-top: 24px;
  padding-top: 8px;
  padding-bottom: 8px;
  padding-left: 16px;
  padding-right: 16px;
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 48px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-width: 1px;
  border-radius: 4px;
  background-color: #E0D7FE00;
}

.c31:hover {
  opacity: 0.8;
}

.c31:hover {
  background-color: #E0D7FE;
}

@media screen and (min-width:40em) {
  .c45 {
    margin-left: 24px;
  }
}

@media screen and (min-width:52em) {
  .c45 {
    margin-left: 32px;
  }
}

<div
  class="SidebarLayout__Wrapper-gwfrwp-0 c0"
>
  <div
    class="c1"
    height="100vh"
  >
    <div
      class="c2"
      color="purple"
      display="flex"
      height="300px"
      width="300px"
    >
      <div
        class="c3"
        color="card.account.color"
        display="flex"
      >
        <div
          class="c4"
          color="card.account.color"
          display="flex"
          size="6"
        >
          <h3
            class="c5"
          >
            Ac
          </h3>
        </div>
        <p
          class="c6"
          font-family="RT-Alias-Grotesk"
          font-size="2"
          font-weight="400"
        >
          Account
        </p>
      </div>
      <div
        class="c7"
        color="card.account.color"
      >
        <p
          class="c8"
          font-family="RT-Alias-Grotesk"
          font-size="2"
          font-weight="400"
        >
          Your Address
        </p>
        <div
          class="c9"
          display="flex"
        >
          <h2
            class="c10"
            font-family="RT-Alias-Grotesk"
            font-size="4"
            font-weight="1"
            overflow="hidden"
          >
            t1z225 ... 6z6wgi
          </h2>
          <button
            class="c11 c12"
            display="flex"
            font-size="3"
            height="6"
          >
            <svg
              class="c13 c14"
              fill="none"
              height="24"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <rect
                fill="#1A0066"
                height="12"
                width="12"
                x="8"
                y="4"
              />
              <rect
                fill="#E0D7FE"
                height="12"
                width="12"
                x="4"
                y="8"
              />
            </svg>
            <h4
              class="c15 c16"
              color="core.secondary"
              font-family="RT-Alias-Grotesk"
              font-size="2"
              font-weight="400"
            >
              Copy
            </h4>
          </button>
        </div>
      </div>
      <div
        class="c17"
        display="flex"
      >
        <button
          class="c18"
          font-size="3"
          height="max-content"
          type="button"
        >
          Switch
        </button>
      </div>
    </div>
    <div
      class="c19"
      display="flex"
      width="300px"
    >
      <div
        class="c20"
        display="flex"
      >
        <h4
          class="c21"
          font-family="RT-Alias-Grotesk"
          font-size="2"
          font-weight="400"
        >
          Balance
        </h4>
        <div
          class="c20"
          display="flex"
        >
          <h4
            class="c22 c23"
            color="core.black"
            font-family="RT-Alias-Grotesk"
            font-size="2"
            font-weight="400"
          >
            Approx.
          </h4>
          <div
            class="c24"
            width="2"
          />
          <h4
            class="c25 c23"
            color="core.darkgray"
            font-family="RT-Alias-Grotesk"
            font-size="2"
            font-weight="400"
          >
            Exact
          </h4>
        </div>
      </div>
      <div
        class="c26"
        overflow="hidden"
      >
        <h2
          class="c27 c28"
          color="card.balance.color"
          font-family="RT-Alias-Grotesk"
          font-size="6"
          font-weight="700"
        >
          1
           FIL
        </h2>
      </div>
      <div
        class="c29"
        display="flex"
      >
        <button
          class="c30"
          font-size="3"
          height="6"
          type="button"
        >
          Send
        </button>
      </div>
    </div>
    <button
      class="c31"
      display="flex"
      font-size="3"
      height="6"
      width="100%"
    >
      Logout
    </button>
  </div>
  <div
    class="c32"
  >
    <div
      class="c33"
      width="100%"
    >
      <div
        class="c34"
        display="flex"
      >
        <div
          class="c35"
          display="flex"
        >
          <div
            class="c36"
            color="core.primary"
            display="flex"
            size="6"
          >
            <h3
              class="c5"
            >
              Tx
            </h3>
          </div>
          <p
            class="c37"
            color="core.primary"
            font-family="RT-Alias-Grotesk"
            font-size="2"
            font-weight="400"
          >
            Transaction History
          </p>
        </div>
        <button
          class="c38"
          font-size="3"
          height="6"
          type="button"
        >
          Refresh
        </button>
      </div>
      <div
        class="c39"
      >
        <ul
          class="c40"
        >
          <li
            class="c41"
            display="flex"
          >
            <ul
              class="c42"
              display="flex"
            >
              <li
                class="c43"
              >
                <svg
                  class="c44"
                  fill="none"
                  height="34"
                  viewBox="0 0 34 34"
                  width="34"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <rect
                    fill="#5E26FF"
                    height="32"
                    rx="16"
                    width="32"
                    x="1"
                    y="1"
                  />
                  <path
                    d="M16.4343 23.5657C16.7467 23.8781 17.2533 23.8781 17.5657 23.5657L22.6569 18.4745C22.9693 18.1621 22.9693 17.6556 22.6569 17.3431C22.3444 17.0307 21.8379 17.0307 21.5255 17.3431L17 21.8686L12.4745 17.3431C12.1621 17.0307 11.6556 17.0307 11.3431 17.3431C11.0307 17.6556 11.0307 18.1621 11.3431 18.4745L16.4343 23.5657ZM16.2 11L16.2 23L17.8 23L17.8 11L16.2 11Z"
                    fill="#E8ECF7"
                  />
                  <rect
                    height="32"
                    rx="16"
                    stroke="#5E26FF"
                    stroke-width="1.4"
                    width="32"
                    x="1"
                    y="1"
                  />
                </svg>
              </li>
            </ul>
            <ul
              class="c45"
              display="flex"
            >
              <li
                class="c46"
                overflow="hidden"
                width="9"
              >
                <h4
                  class="c47"
                  color="core.nearblack"
                  font-family="RT-Alias-Grotesk"
                  font-size="2"
                  font-weight="400"
                >
                  From
                </h4>
                <p
                  class="c48"
                  color="core.nearblack"
                  font-family="RT-Alias-Grotesk"
                  font-size="3"
                  font-weight="400"
                >
                  t1kh7x ... nf45jq
                </p>
              </li>
              <li
                class="c49"
                display="flex"
                width="9"
              >
                <p
                  class="c50"
                  color="core.darkgray"
                  font-family="RT-Alias-Grotesk"
                  font-size="2"
                  font-weight="400"
                >
                  Jan 12, 2020 - 2:30:30
                </p>
              </li>
            </ul>
          </li>
        </ul>
        <ul
          class="c51"
          display="flex"
        >
          <li
            class=""
          >
            <ul
              class="c52"
              display="flex"
            >
              <li
                class="c53"
                display="flex"
              >
                <p
                  class="c54"
                  color="core.nearblack"
                  font-family="RT-Alias-Grotesk"
                  font-size="2"
                  font-weight="400"
                >
                  0
                </p>
              </li>
              <li
                class="c53"
                display="flex"
              >
                <p
                  class="c55"
                  color="core.darkgray"
                  display="none"
                  font-family="RT-Alias-Grotesk"
                  font-size="2"
                  font-weight="400"
                >
                  0
                </p>
              </li>
            </ul>
          </li>
          <li
            class=""
          >
            <ul
              class="c56"
              display="flex"
            >
              <li
                class=""
              >
                <p
                  class="c54"
                  color="core.nearblack"
                  font-family="RT-Alias-Grotesk"
                  font-size="2"
                  font-weight="400"
                >
                  FIL
                </p>
                <p
                  class="c55"
                  color="core.darkgray"
                  display="none"
                  font-family="RT-Alias-Grotesk"
                  font-size="2"
                  font-weight="400"
                >
                  USD
                </p>
              </li>
            </ul>
          </li>
        </ul>
      </div>
      <div
        class="c39"
      >
        <ul
          class="c40"
        >
          <li
            class="c41"
            display="flex"
          >
            <ul
              class="c42"
              display="flex"
            >
              <li
                class="c43"
              >
                <svg
                  class="c44"
                  fill="none"
                  height="34"
                  viewBox="0 0 34 34"
                  width="34"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <rect
                    fill="#5E26FF"
                    height="32"
                    rx="16"
                    width="32"
                    x="1"
                    y="1"
                  />
                  <path
                    d="M16.4343 23.5657C16.7467 23.8781 17.2533 23.8781 17.5657 23.5657L22.6569 18.4745C22.9693 18.1621 22.9693 17.6556 22.6569 17.3431C22.3444 17.0307 21.8379 17.0307 21.5255 17.3431L17 21.8686L12.4745 17.3431C12.1621 17.0307 11.6556 17.0307 11.3431 17.3431C11.0307 17.6556 11.0307 18.1621 11.3431 18.4745L16.4343 23.5657ZM16.2 11L16.2 23L17.8 23L17.8 11L16.2 11Z"
                    fill="#E8ECF7"
                  />
                  <rect
                    height="32"
                    rx="16"
                    stroke="#5E26FF"
                    stroke-width="1.4"
                    width="32"
                    x="1"
                    y="1"
                  />
                </svg>
              </li>
            </ul>
            <ul
              class="c45"
              display="flex"
            >
              <li
                class="c46"
                overflow="hidden"
                width="9"
              >
                <h4
                  class="c47"
                  color="core.nearblack"
                  font-family="RT-Alias-Grotesk"
                  font-size="2"
                  font-weight="400"
                >
                  From
                </h4>
                <p
                  class="c48"
                  color="core.nearblack"
                  font-family="RT-Alias-Grotesk"
                  font-size="3"
                  font-weight="400"
                >
                  t1kh7x ... nf45jq
                </p>
              </li>
              <li
                class="c49"
                display="flex"
                width="9"
              >
                <p
                  class="c50"
                  color="core.darkgray"
                  font-family="RT-Alias-Grotesk"
                  font-size="2"
                  font-weight="400"
                >
                  Jan 12, 2020 - 2:30:30
                </p>
              </li>
            </ul>
          </li>
        </ul>
        <ul
          class="c51"
          display="flex"
        >
          <li
            class=""
          >
            <ul
              class="c52"
              display="flex"
            >
              <li
                class="c53"
                display="flex"
              >
                <p
                  class="c54"
                  color="core.nearblack"
                  font-family="RT-Alias-Grotesk"
                  font-size="2"
                  font-weight="400"
                >
                  0.2
                </p>
              </li>
              <li
                class="c53"
                display="flex"
              >
                <p
                  class="c55"
                  color="core.darkgray"
                  display="none"
                  font-family="RT-Alias-Grotesk"
                  font-size="2"
                  font-weight="400"
                >
                  1
                </p>
              </li>
            </ul>
          </li>
          <li
            class=""
          >
            <ul
              class="c56"
              display="flex"
            >
              <li
                class=""
              >
                <p
                  class="c54"
                  color="core.nearblack"
                  font-family="RT-Alias-Grotesk"
                  font-size="2"
                  font-weight="400"
                >
                  FIL
                </p>
                <p
                  class="c55"
                  color="core.darkgray"
                  display="none"
                  font-family="RT-Alias-Grotesk"
                  font-size="2"
                  font-weight="400"
                >
                  USD
                </p>
              </li>
            </ul>
          </li>
        </ul>
      </div>
      <div
        class="c39"
      >
        <ul
          class="c40"
        >
          <li
            class="c41"
            display="flex"
          >
            <ul
              class="c42"
              display="flex"
            >
              <li
                class="c43"
              >
                <svg
                  class="c44"
                  fill="none"
                  height="34"
                  viewBox="0 0 34 34"
                  width="34"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <rect
                    fill="#5E26FF"
                    height="32"
                    rx="16"
                    width="32"
                    x="1"
                    y="1"
                  />
                  <path
                    d="M16.4343 23.5657C16.7467 23.8781 17.2533 23.8781 17.5657 23.5657L22.6569 18.4745C22.9693 18.1621 22.9693 17.6556 22.6569 17.3431C22.3444 17.0307 21.8379 17.0307 21.5255 17.3431L17 21.8686L12.4745 17.3431C12.1621 17.0307 11.6556 17.0307 11.3431 17.3431C11.0307 17.6556 11.0307 18.1621 11.3431 18.4745L16.4343 23.5657ZM16.2 11L16.2 23L17.8 23L17.8 11L16.2 11Z"
                    fill="#E8ECF7"
                  />
                  <rect
                    height="32"
                    rx="16"
                    stroke="#5E26FF"
                    stroke-width="1.4"
                    width="32"
                    x="1"
                    y="1"
                  />
                </svg>
              </li>
            </ul>
            <ul
              class="c45"
              display="flex"
            >
              <li
                class="c46"
                overflow="hidden"
                width="9"
              >
                <h4
                  class="c47"
                  color="core.nearblack"
                  font-family="RT-Alias-Grotesk"
                  font-size="2"
                  font-weight="400"
                >
                  From
                </h4>
                <p
                  class="c48"
                  color="core.nearblack"
                  font-family="RT-Alias-Grotesk"
                  font-size="3"
                  font-weight="400"
                >
                  t1kh7x ... nf45jq
                </p>
              </li>
              <li
                class="c49"
                display="flex"
                width="9"
              >
                <p
                  class="c50"
                  color="core.darkgray"
                  font-family="RT-Alias-Grotesk"
                  font-size="2"
                  font-weight="400"
                >
                  Jan 12, 2020 - 2:30:30
                </p>
              </li>
            </ul>
          </li>
        </ul>
        <ul
          class="c51"
          display="flex"
        >
          <li
            class=""
          >
            <ul
              class="c52"
              display="flex"
            >
              <li
                class="c53"
                display="flex"
              >
                <p
                  class="c54"
                  color="core.nearblack"
                  font-family="RT-Alias-Grotesk"
                  font-size="2"
                  font-weight="400"
                >
                  0.000001
                </p>
              </li>
              <li
                class="c53"
                display="flex"
              >
                <p
                  class="c55"
                  color="core.darkgray"
                  display="none"
                  font-family="RT-Alias-Grotesk"
                  font-size="2"
                  font-weight="400"
                >
                  &lt; 0.01
                </p>
              </li>
            </ul>
          </li>
          <li
            class=""
          >
            <ul
              class="c56"
              display="flex"
            >
              <li
                class=""
              >
                <p
                  class="c54"
                  color="core.nearblack"
                  font-family="RT-Alias-Grotesk"
                  font-size="2"
                  font-weight="400"
                >
                  FIL
                </p>
                <p
                  class="c55"
                  color="core.darkgray"
                  display="none"
                  font-family="RT-Alias-Grotesk"
                  font-size="2"
                  font-weight="400"
                >
                  USD
                </p>
              </li>
            </ul>
          </li>
        </ul>
      </div>
      <div
        class="c39"
      >
        <ul
          class="c40"
        >
          <li
            class="c41"
            display="flex"
          >
            <ul
              class="c42"
              display="flex"
            >
              <li
                class="c43"
              >
                <svg
                  class="c44"
                  fill="none"
                  height="34"
                  viewBox="0 0 34 34"
                  width="34"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <rect
                    fill="#5E26FF"
                    height="32"
                    rx="16"
                    width="32"
                    x="1"
                    y="1"
                  />
                  <path
                    d="M16.4343 23.5657C16.7467 23.8781 17.2533 23.8781 17.5657 23.5657L22.6569 18.4745C22.9693 18.1621 22.9693 17.6556 22.6569 17.3431C22.3444 17.0307 21.8379 17.0307 21.5255 17.3431L17 21.8686L12.4745 17.3431C12.1621 17.0307 11.6556 17.0307 11.3431 17.3431C11.0307 17.6556 11.0307 18.1621 11.3431 18.4745L16.4343 23.5657ZM16.2 11L16.2 23L17.8 23L17.8 11L16.2 11Z"
                    fill="#E8ECF7"
                  />
                  <rect
                    height="32"
                    rx="16"
                    stroke="#5E26FF"
                    stroke-width="1.4"
                    width="32"
                    x="1"
                    y="1"
                  />
                </svg>
              </li>
            </ul>
            <ul
              class="c45"
              display="flex"
            >
              <li
                class="c46"
                overflow="hidden"
                width="9"
              >
                <h4
                  class="c47"
                  color="core.nearblack"
                  font-family="RT-Alias-Grotesk"
                  font-size="2"
                  font-weight="400"
                >
                  From
                </h4>
                <p
                  class="c48"
                  color="core.nearblack"
                  font-family="RT-Alias-Grotesk"
                  font-size="3"
                  font-weight="400"
                >
                  t1kh7x ... nf45jq
                </p>
              </li>
              <li
                class="c49"
                display="flex"
                width="9"
              >
                <p
                  class="c50"
                  color="core.darkgray"
                  font-family="RT-Alias-Grotesk"
                  font-size="2"
                  font-weight="400"
                >
                  Jan 12, 2020 - 2:30:30
                </p>
              </li>
            </ul>
          </li>
        </ul>
        <ul
          class="c51"
          display="flex"
        >
          <li
            class=""
          >
            <ul
              class="c52"
              display="flex"
            >
              <li
                class="c53"
                display="flex"
              >
                <p
                  class="c54"
                  color="core.nearblack"
                  font-family="RT-Alias-Grotesk"
                  font-size="2"
                  font-weight="400"
                >
                  0.0000001
                </p>
              </li>
              <li
                class="c53"
                display="flex"
              >
                <p
                  class="c55"
                  color="core.darkgray"
                  display="none"
                  font-family="RT-Alias-Grotesk"
                  font-size="2"
                  font-weight="400"
                >
                  &lt; 0.01
                </p>
              </li>
            </ul>
          </li>
          <li
            class=""
          >
            <ul
              class="c56"
              display="flex"
            >
              <li
                class=""
              >
                <p
                  class="c54"
                  color="core.nearblack"
                  font-family="RT-Alias-Grotesk"
                  font-size="2"
                  font-weight="400"
                >
                  FIL
                </p>
                <p
                  class="c55"
                  color="core.darkgray"
                  display="none"
                  font-family="RT-Alias-Grotesk"
                  font-size="2"
                  font-weight="400"
                >
                  USD
                </p>
              </li>
            </ul>
          </li>
        </ul>
      </div>
      <div
        class="c39"
      >
        <ul
          class="c40"
        >
          <li
            class="c41"
            display="flex"
          >
            <ul
              class="c42"
              display="flex"
            >
              <li
                class="c43"
              >
                <svg
                  class="c44"
                  fill="none"
                  height="34"
                  viewBox="0 0 34 34"
                  width="34"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <rect
                    fill="#5E26FF"
                    height="32"
                    rx="16"
                    width="32"
                    x="1"
                    y="1"
                  />
                  <path
                    d="M16.4343 23.5657C16.7467 23.8781 17.2533 23.8781 17.5657 23.5657L22.6569 18.4745C22.9693 18.1621 22.9693 17.6556 22.6569 17.3431C22.3444 17.0307 21.8379 17.0307 21.5255 17.3431L17 21.8686L12.4745 17.3431C12.1621 17.0307 11.6556 17.0307 11.3431 17.3431C11.0307 17.6556 11.0307 18.1621 11.3431 18.4745L16.4343 23.5657ZM16.2 11L16.2 23L17.8 23L17.8 11L16.2 11Z"
                    fill="#E8ECF7"
                  />
                  <rect
                    height="32"
                    rx="16"
                    stroke="#5E26FF"
                    stroke-width="1.4"
                    width="32"
                    x="1"
                    y="1"
                  />
                </svg>
              </li>
            </ul>
            <ul
              class="c45"
              display="flex"
            >
              <li
                class="c46"
                overflow="hidden"
                width="9"
              >
                <h4
                  class="c47"
                  color="core.nearblack"
                  font-family="RT-Alias-Grotesk"
                  font-size="2"
                  font-weight="400"
                >
                  From
                </h4>
                <p
                  class="c48"
                  color="core.nearblack"
                  font-family="RT-Alias-Grotesk"
                  font-size="3"
                  font-weight="400"
                >
                  t1kh7x ... nf45jq
                </p>
              </li>
              <li
                class="c49"
                display="flex"
                width="9"
              >
                <p
                  class="c50"
                  color="core.darkgray"
                  font-family="RT-Alias-Grotesk"
                  font-size="2"
                  font-weight="400"
                >
                  Jan 12, 2020 - 2:30:30
                </p>
              </li>
            </ul>
          </li>
        </ul>
        <ul
          class="c51"
          display="flex"
        >
          <li
            class=""
          >
            <ul
              class="c52"
              display="flex"
            >
              <li
                class="c53"
                display="flex"
              >
                <p
                  class="c54"
                  color="core.nearblack"
                  font-family="RT-Alias-Grotesk"
                  font-size="2"
                  font-weight="400"
                >
                  0.00001
                </p>
              </li>
              <li
                class="c53"
                display="flex"
              >
                <p
                  class="c55"
                  color="core.darkgray"
                  display="none"
                  font-family="RT-Alias-Grotesk"
                  font-size="2"
                  font-weight="400"
                >
                  &lt; 0.01
                </p>
              </li>
            </ul>
          </li>
          <li
            class=""
          >
            <ul
              class="c56"
              display="flex"
            >
              <li
                class=""
              >
                <p
                  class="c54"
                  color="core.nearblack"
                  font-family="RT-Alias-Grotesk"
                  font-size="2"
                  font-weight="400"
                >
                  FIL
                </p>
                <p
                  class="c55"
                  color="core.darkgray"
                  display="none"
                  font-family="RT-Alias-Grotesk"
                  font-size="2"
                  font-weight="400"
                >
                  USD
                </p>
              </li>
            </ul>
          </li>
        </ul>
      </div>
      <div
        class="c39"
      >
        <ul
          class="c40"
        >
          <li
            class="c41"
            display="flex"
          >
            <ul
              class="c42"
              display="flex"
            >
              <li
                class="c43"
              >
                <svg
                  class="c44"
                  fill="none"
                  height="34"
                  viewBox="0 0 34 34"
                  width="34"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <rect
                    fill="#5E26FF"
                    height="32"
                    rx="16"
                    width="32"
                    x="1"
                    y="1"
                  />
                  <path
                    d="M16.4343 23.5657C16.7467 23.8781 17.2533 23.8781 17.5657 23.5657L22.6569 18.4745C22.9693 18.1621 22.9693 17.6556 22.6569 17.3431C22.3444 17.0307 21.8379 17.0307 21.5255 17.3431L17 21.8686L12.4745 17.3431C12.1621 17.0307 11.6556 17.0307 11.3431 17.3431C11.0307 17.6556 11.0307 18.1621 11.3431 18.4745L16.4343 23.5657ZM16.2 11L16.2 23L17.8 23L17.8 11L16.2 11Z"
                    fill="#E8ECF7"
                  />
                  <rect
                    height="32"
                    rx="16"
                    stroke="#5E26FF"
                    stroke-width="1.4"
                    width="32"
                    x="1"
                    y="1"
                  />
                </svg>
              </li>
            </ul>
            <ul
              class="c45"
              display="flex"
            >
              <li
                class="c46"
                overflow="hidden"
                width="9"
              >
                <h4
                  class="c47"
                  color="core.nearblack"
                  font-family="RT-Alias-Grotesk"
                  font-size="2"
                  font-weight="400"
                >
                  From
                </h4>
                <p
                  class="c48"
                  color="core.nearblack"
                  font-family="RT-Alias-Grotesk"
                  font-size="3"
                  font-weight="400"
                >
                  t1kh7x ... nf45jq
                </p>
              </li>
              <li
                class="c49"
                display="flex"
                width="9"
              >
                <p
                  class="c50"
                  color="core.darkgray"
                  font-family="RT-Alias-Grotesk"
                  font-size="2"
                  font-weight="400"
                >
                  Jan 12, 2020 - 2:30:30
                </p>
              </li>
            </ul>
          </li>
        </ul>
        <ul
          class="c51"
          display="flex"
        >
          <li
            class=""
          >
            <ul
              class="c52"
              display="flex"
            >
              <li
                class="c53"
                display="flex"
              >
                <p
                  class="c54"
                  color="core.nearblack"
                  font-family="RT-Alias-Grotesk"
                  font-size="2"
                  font-weight="400"
                >
                  0.0001
                </p>
              </li>
              <li
                class="c53"
                display="flex"
              >
                <p
                  class="c55"
                  color="core.darkgray"
                  display="none"
                  font-family="RT-Alias-Grotesk"
                  font-size="2"
                  font-weight="400"
                >
                  &lt; 0.01
                </p>
              </li>
            </ul>
          </li>
          <li
            class=""
          >
            <ul
              class="c56"
              display="flex"
            >
              <li
                class=""
              >
                <p
                  class="c54"
                  color="core.nearblack"
                  font-family="RT-Alias-Grotesk"
                  font-size="2"
                  font-weight="400"
                >
                  FIL
                </p>
                <p
                  class="c55"
                  color="core.darkgray"
                  display="none"
                  font-family="RT-Alias-Grotesk"
                  font-size="2"
                  font-weight="400"
                >
                  USD
                </p>
              </li>
            </ul>
          </li>
        </ul>
      </div>
      <div
        class="c39"
      >
        <ul
          class="c40"
        >
          <li
            class="c41"
            display="flex"
          >
            <ul
              class="c42"
              display="flex"
            >
              <li
                class="c43"
              >
                <svg
                  class="c44"
                  fill="none"
                  height="34"
                  viewBox="0 0 34 34"
                  width="34"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <rect
                    fill="#5E26FF"
                    height="32"
                    rx="16"
                    width="32"
                    x="1"
                    y="1"
                  />
                  <path
                    d="M16.4343 23.5657C16.7467 23.8781 17.2533 23.8781 17.5657 23.5657L22.6569 18.4745C22.9693 18.1621 22.9693 17.6556 22.6569 17.3431C22.3444 17.0307 21.8379 17.0307 21.5255 17.3431L17 21.8686L12.4745 17.3431C12.1621 17.0307 11.6556 17.0307 11.3431 17.3431C11.0307 17.6556 11.0307 18.1621 11.3431 18.4745L16.4343 23.5657ZM16.2 11L16.2 23L17.8 23L17.8 11L16.2 11Z"
                    fill="#E8ECF7"
                  />
                  <rect
                    height="32"
                    rx="16"
                    stroke="#5E26FF"
                    stroke-width="1.4"
                    width="32"
                    x="1"
                    y="1"
                  />
                </svg>
              </li>
            </ul>
            <ul
              class="c45"
              display="flex"
            >
              <li
                class="c46"
                overflow="hidden"
                width="9"
              >
                <h4
                  class="c47"
                  color="core.nearblack"
                  font-family="RT-Alias-Grotesk"
                  font-size="2"
                  font-weight="400"
                >
                  From
                </h4>
                <p
                  class="c48"
                  color="core.nearblack"
                  font-family="RT-Alias-Grotesk"
                  font-size="3"
                  font-weight="400"
                >
                  t1kh7x ... nf45jq
                </p>
              </li>
              <li
                class="c49"
                display="flex"
                width="9"
              >
                <p
                  class="c50"
                  color="core.darkgray"
                  font-family="RT-Alias-Grotesk"
                  font-size="2"
                  font-weight="400"
                >
                  Jan 12, 2020 - 2:30:30
                </p>
              </li>
            </ul>
          </li>
        </ul>
        <ul
          class="c51"
          display="flex"
        >
          <li
            class=""
          >
            <ul
              class="c52"
              display="flex"
            >
              <li
                class="c53"
                display="flex"
              >
                <p
                  class="c54"
                  color="core.nearblack"
                  font-family="RT-Alias-Grotesk"
                  font-size="2"
                  font-weight="400"
                >
                  0
                </p>
              </li>
              <li
                class="c53"
                display="flex"
              >
                <p
                  class="c55"
                  color="core.darkgray"
                  display="none"
                  font-family="RT-Alias-Grotesk"
                  font-size="2"
                  font-weight="400"
                >
                  0
                </p>
              </li>
            </ul>
          </li>
          <li
            class=""
          >
            <ul
              class="c56"
              display="flex"
            >
              <li
                class=""
              >
                <p
                  class="c54"
                  color="core.nearblack"
                  font-family="RT-Alias-Grotesk"
                  font-size="2"
                  font-weight="400"
                >
                  FIL
                </p>
                <p
                  class="c55"
                  color="core.darkgray"
                  display="none"
                  font-family="RT-Alias-Grotesk"
                  font-size="2"
                  font-weight="400"
                >
                  USD
                </p>
              </li>
            </ul>
          </li>
        </ul>
      </div>
      <div
        class="c39"
      >
        <ul
          class="c40"
        >
          <li
            class="c41"
            display="flex"
          >
            <ul
              class="c42"
              display="flex"
            >
              <li
                class="c43"
              >
                <svg
                  class="c44"
                  fill="none"
                  height="34"
                  viewBox="0 0 34 34"
                  width="34"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <rect
                    fill="#5E26FF"
                    height="32"
                    rx="16"
                    width="32"
                    x="1"
                    y="1"
                  />
                  <path
                    d="M16.4343 23.5657C16.7467 23.8781 17.2533 23.8781 17.5657 23.5657L22.6569 18.4745C22.9693 18.1621 22.9693 17.6556 22.6569 17.3431C22.3444 17.0307 21.8379 17.0307 21.5255 17.3431L17 21.8686L12.4745 17.3431C12.1621 17.0307 11.6556 17.0307 11.3431 17.3431C11.0307 17.6556 11.0307 18.1621 11.3431 18.4745L16.4343 23.5657ZM16.2 11L16.2 23L17.8 23L17.8 11L16.2 11Z"
                    fill="#E8ECF7"
                  />
                  <rect
                    height="32"
                    rx="16"
                    stroke="#5E26FF"
                    stroke-width="1.4"
                    width="32"
                    x="1"
                    y="1"
                  />
                </svg>
              </li>
            </ul>
            <ul
              class="c45"
              display="flex"
            >
              <li
                class="c46"
                overflow="hidden"
                width="9"
              >
                <h4
                  class="c47"
                  color="core.nearblack"
                  font-family="RT-Alias-Grotesk"
                  font-size="2"
                  font-weight="400"
                >
                  From
                </h4>
                <p
                  class="c48"
                  color="core.nearblack"
                  font-family="RT-Alias-Grotesk"
                  font-size="3"
                  font-weight="400"
                >
                  t1kh7x ... nf45jq
                </p>
              </li>
              <li
                class="c49"
                display="flex"
                width="9"
              >
                <p
                  class="c50"
                  color="core.darkgray"
                  font-family="RT-Alias-Grotesk"
                  font-size="2"
                  font-weight="400"
                >
                  Jan 12, 2020 - 2:30:30
                </p>
              </li>
            </ul>
          </li>
        </ul>
        <ul
          class="c51"
          display="flex"
        >
          <li
            class=""
          >
            <ul
              class="c52"
              display="flex"
            >
              <li
                class="c53"
                display="flex"
              >
                <p
                  class="c54"
                  color="core.nearblack"
                  font-family="RT-Alias-Grotesk"
                  font-size="2"
                  font-weight="400"
                >
                  0.5
                </p>
              </li>
              <li
                class="c53"
                display="flex"
              >
                <p
                  class="c55"
                  color="core.darkgray"
                  display="none"
                  font-family="RT-Alias-Grotesk"
                  font-size="2"
                  font-weight="400"
                >
                  2.5
                </p>
              </li>
            </ul>
          </li>
          <li
            class=""
          >
            <ul
              class="c56"
              display="flex"
            >
              <li
                class=""
              >
                <p
                  class="c54"
                  color="core.nearblack"
                  font-family="RT-Alias-Grotesk"
                  font-size="2"
                  font-weight="400"
                >
                  FIL
                </p>
                <p
                  class="c55"
                  color="core.darkgray"
                  display="none"
                  font-family="RT-Alias-Grotesk"
                  font-size="2"
                  font-weight="400"
                >
                  USD
                </p>
              </li>
            </ul>
          </li>
        </ul>
      </div>
      <div
        class="c39"
      >
        <ul
          class="c40"
        >
          <li
            class="c41"
            display="flex"
          >
            <ul
              class="c42"
              display="flex"
            >
              <li
                class="c43"
              >
                <svg
                  class="c44"
                  fill="none"
                  height="34"
                  viewBox="0 0 34 34"
                  width="34"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <rect
                    fill="#5E26FF"
                    height="32"
                    rx="16"
                    width="32"
                    x="1"
                    y="1"
                  />
                  <path
                    d="M16.4343 23.5657C16.7467 23.8781 17.2533 23.8781 17.5657 23.5657L22.6569 18.4745C22.9693 18.1621 22.9693 17.6556 22.6569 17.3431C22.3444 17.0307 21.8379 17.0307 21.5255 17.3431L17 21.8686L12.4745 17.3431C12.1621 17.0307 11.6556 17.0307 11.3431 17.3431C11.0307 17.6556 11.0307 18.1621 11.3431 18.4745L16.4343 23.5657ZM16.2 11L16.2 23L17.8 23L17.8 11L16.2 11Z"
                    fill="#E8ECF7"
                  />
                  <rect
                    height="32"
                    rx="16"
                    stroke="#5E26FF"
                    stroke-width="1.4"
                    width="32"
                    x="1"
                    y="1"
                  />
                </svg>
              </li>
            </ul>
            <ul
              class="c45"
              display="flex"
            >
              <li
                class="c46"
                overflow="hidden"
                width="9"
              >
                <h4
                  class="c47"
                  color="core.nearblack"
                  font-family="RT-Alias-Grotesk"
                  font-size="2"
                  font-weight="400"
                >
                  From
                </h4>
                <p
                  class="c48"
                  color="core.nearblack"
                  font-family="RT-Alias-Grotesk"
                  font-size="3"
                  font-weight="400"
                >
                  t1kh7x ... nf45jq
                </p>
              </li>
              <li
                class="c49"
                display="flex"
                width="9"
              >
                <p
                  class="c50"
                  color="core.darkgray"
                  font-family="RT-Alias-Grotesk"
                  font-size="2"
                  font-weight="400"
                >
                  Jan 12, 2020 - 2:30:30
                </p>
              </li>
            </ul>
          </li>
        </ul>
        <ul
          class="c51"
          display="flex"
        >
          <li
            class=""
          >
            <ul
              class="c52"
              display="flex"
            >
              <li
                class="c53"
                display="flex"
              >
                <p
                  class="c54"
                  color="core.nearblack"
                  font-family="RT-Alias-Grotesk"
                  font-size="2"
                  font-weight="400"
                >
                  0.00001
                </p>
              </li>
              <li
                class="c53"
                display="flex"
              >
                <p
                  class="c55"
                  color="core.darkgray"
                  display="none"
                  font-family="RT-Alias-Grotesk"
                  font-size="2"
                  font-weight="400"
                >
                  &lt; 0.01
                </p>
              </li>
            </ul>
          </li>
          <li
            class=""
          >
            <ul
              class="c56"
              display="flex"
            >
              <li
                class=""
              >
                <p
                  class="c54"
                  color="core.nearblack"
                  font-family="RT-Alias-Grotesk"
                  font-size="2"
                  font-weight="400"
                >
                  FIL
                </p>
                <p
                  class="c55"
                  color="core.darkgray"
                  display="none"
                  font-family="RT-Alias-Grotesk"
                  font-size="2"
                  font-weight="400"
                >
                  USD
                </p>
              </li>
            </ul>
          </li>
        </ul>
      </div>
      <div
        class="c39"
      >
        <ul
          class="c40"
        >
          <li
            class="c41"
            display="flex"
          >
            <ul
              class="c42"
              display="flex"
            >
              <li
                class="c43"
              >
                <svg
                  class="c44"
                  fill="none"
                  height="34"
                  viewBox="0 0 34 34"
                  width="34"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <rect
                    fill="#5E26FF"
                    height="32"
                    rx="16"
                    width="32"
                    x="1"
                    y="1"
                  />
                  <path
                    d="M16.4343 23.5657C16.7467 23.8781 17.2533 23.8781 17.5657 23.5657L22.6569 18.4745C22.9693 18.1621 22.9693 17.6556 22.6569 17.3431C22.3444 17.0307 21.8379 17.0307 21.5255 17.3431L17 21.8686L12.4745 17.3431C12.1621 17.0307 11.6556 17.0307 11.3431 17.3431C11.0307 17.6556 11.0307 18.1621 11.3431 18.4745L16.4343 23.5657ZM16.2 11L16.2 23L17.8 23L17.8 11L16.2 11Z"
                    fill="#E8ECF7"
                  />
                  <rect
                    height="32"
                    rx="16"
                    stroke="#5E26FF"
                    stroke-width="1.4"
                    width="32"
                    x="1"
                    y="1"
                  />
                </svg>
              </li>
            </ul>
            <ul
              class="c45"
              display="flex"
            >
              <li
                class="c46"
                overflow="hidden"
                width="9"
              >
                <h4
                  class="c47"
                  color="core.nearblack"
                  font-family="RT-Alias-Grotesk"
                  font-size="2"
                  font-weight="400"
                >
                  From
                </h4>
                <p
                  class="c48"
                  color="core.nearblack"
                  font-family="RT-Alias-Grotesk"
                  font-size="3"
                  font-weight="400"
                >
                  t1kh7x ... nf45jq
                </p>
              </li>
              <li
                class="c49"
                display="flex"
                width="9"
              >
                <p
                  class="c50"
                  color="core.darkgray"
                  font-family="RT-Alias-Grotesk"
                  font-size="2"
                  font-weight="400"
                >
                  Jan 12, 2020 - 2:30:30
                </p>
              </li>
            </ul>
          </li>
        </ul>
        <ul
          class="c51"
          display="flex"
        >
          <li
            class=""
          >
            <ul
              class="c52"
              display="flex"
            >
              <li
                class="c53"
                display="flex"
              >
                <p
                  class="c54"
                  color="core.nearblack"
                  font-family="RT-Alias-Grotesk"
                  font-size="2"
                  font-weight="400"
                >
                  0.0001
                </p>
              </li>
              <li
                class="c53"
                display="flex"
              >
                <p
                  class="c55"
                  color="core.darkgray"
                  display="none"
                  font-family="RT-Alias-Grotesk"
                  font-size="2"
                  font-weight="400"
                >
                  &lt; 0.01
                </p>
              </li>
            </ul>
          </li>
          <li
            class=""
          >
            <ul
              class="c56"
              display="flex"
            >
              <li
                class=""
              >
                <p
                  class="c54"
                  color="core.nearblack"
                  font-family="RT-Alias-Grotesk"
                  font-size="2"
                  font-weight="400"
                >
                  FIL
                </p>
                <p
                  class="c55"
                  color="core.darkgray"
                  display="none"
                  font-family="RT-Alias-Grotesk"
                  font-size="2"
                  font-weight="400"
                >
                  USD
                </p>
              </li>
            </ul>
          </li>
        </ul>
      </div>
      <div
        class="c57"
      >
        <p
          class="c58"
          color="core.primary"
          font-family="RT-Alias-Grotesk"
          font-size="2"
          font-weight="400"
          role="button"
          width="100%"
        >
          View More
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`WalletView it renders the send page when the user goes to the send screen 1`] = `
.c5 {
  min-width: 0;
  box-sizing: border-box;
  max-width: 640px;
  width: 560px;
  min-width: 480px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c6 {
  min-width: 0;
  box-sizing: border-box;
}

.c7 {
  min-width: 0;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  border-width: 1px;
  padding: 16px;
  margin-top: 8px;
  margin-bottom: 8px;
  background-color: #d9e0f2;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: auto;
  overflow: hidden;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c9 {
  min-width: 0;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c11 {
  min-width: 0;
  box-sizing: border-box;
  border-width: 0.1875rem;
  border-radius: 8px;
  border-style: solid;
  color: #000;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 48px;
  height: 48px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c14 {
  min-width: 0;
  box-sizing: border-box;
  margin-left: 24px;
  margin-top: 0;
  margin-bottom: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c16 {
  min-width: 0;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c17 {
  min-width: 0;
  box-sizing: border-box;
  border-radius: 100px;
  margin-left: 4px;
  margin-right: 4px;
  background-color: #1AD08F;
  display: inline-block;
  width: 8px;
  height: 8px;
}

.c18 {
  min-width: 0;
  box-sizing: border-box;
  border-radius: 100px;
  margin-left: 4px;
  margin-right: 4px;
  background-color: #C4C4C4;
  display: inline-block;
  width: 8px;
  height: 8px;
}

.c19 {
  min-width: 0;
  box-sizing: border-box;
  margin-top: 48px;
  margin-bottom: 24px;
}

.c21 {
  min-width: 0;
  box-sizing: border-box;
  border-radius: 16px;
  box-shadow: rgba(0,0,0,0.10) 0px 0.7px 2.2px -8px,rgba(0,0,0,0.04) 0px 1.7px 2.4px,rgba(0,0,0,0.106) 0px 3.1px 8.1px,rgba(0,0,0,0.04) 0px 5.6px 12.1px,rgba(0,0,0,0.045) 0px 4.4px 4.8px,rgba(0,0,0,0.05) 0px 15px 41px;
}

.c22 {
  min-width: 0;
  box-sizing: border-box;
  border: 0;
  border-top-right-radius: 8px;
  border-top-left-radius: 8px;
  padding: 16px;
  background-color: #5E26FF;
  color: #ffffff;
  width: 100%;
}

.c23 {
  min-width: 0;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c24 {
  min-width: 0;
  box-sizing: border-box;
  border-width: 0.1875rem;
  border-radius: 8px;
  border-style: solid;
  margin-right: 16px;
  color: white;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 48px;
  height: 48px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c25 {
  min-width: 0;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.c27 {
  min-width: 0;
  box-sizing: border-box;
  border: 0;
  padding: 16px;
  background-color: #EFF3FD;
  width: 100%;
}

.c29 {
  min-width: 0;
  box-sizing: border-box;
  margin-right: 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  min-width: 48px;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c31 {
  min-width: 0;
  box-sizing: border-box;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c33 {
  min-width: 0;
  box-sizing: border-box;
  margin: auto;
  margin-top: 16px;
  margin-bottom: 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  max-width: 640px;
  width: 560px;
  min-width: 480px;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
}

.c12 {
  font-family: "RT-Alias-Medium","system-ui","Segoe UI","Roboto",Helvetica;
  font-weight: 700;
  font-size: 1.5rem;
}

.c34 {
  cursor: pointer;
  border: 1px solid #262626;
  background-color: transparent;
  border-color: #262626;
  color: #262626;
  font-size: 1.125rem;
  -webkit-transition: 0.18s ease-in-out;
  transition: 0.18s ease-in-out;
  border-radius: 4px;
  padding-top: 8px;
  padding-bottom: 8px;
  padding-left: 16px;
  padding-right: 16px;
  height: 48px;
  border-width: 1px;
  border-radius: 4px;
}

.c34:hover {
  opacity: 0.8;
}

.c35 {
  cursor: not-allowed;
  border: 1px solid #C4C4C4;
  background-color: #C4C4C4;
  border-color: #C4C4C4;
  font-size: 1.125rem;
  -webkit-transition: 0.18s ease-in-out;
  transition: 0.18s ease-in-out;
  border-radius: 4px;
  padding-top: 8px;
  padding-bottom: 8px;
  padding-left: 16px;
  padding-right: 16px;
  height: 48px;
  border-width: 1px;
  border-radius: 4px;
}

.c35:hover {
  opacity: 1;
}

.c3 {
  width: 24;
  height: 24;
}

.c13 {
  font-size: 1.5rem;
  font-weight: 400;
  line-height: 1.2;
  font-family: RT-Alias-Grotesk;
  margin: 0;
}

.c15 {
  color: #262626;
  font-size: 1.125rem;
  font-weight: 400;
  line-height: 1.4;
  font-family: RT-Alias-Grotesk;
  margin-right: 8px;
  margin-top: 0;
  margin-bottom: 0;
}

.c20 {
  font-size: 1.125rem;
  font-weight: 400;
  line-height: 1.4;
  font-family: RT-Alias-Grotesk;
  text-align: center;
  margin: 0;
}

.c26 {
  font-size: 1.125rem;
  font-weight: 400;
  line-height: 1.4;
  font-family: RT-Alias-Grotesk;
  margin: 0;
}

.c30 {
  color: #262626;
  font-size: 1.125rem;
  font-weight: 400;
  line-height: 1;
  font-family: RT-Alias-Grotesk;
  margin: 0;
}

.c32 {
  min-width: 0;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  padding-left: 8px;
  padding-right: 8px;
  border-radius: 1px;
  -webkit-transition: 0.2s ease-in-out;
  transition: 0.2s ease-in-out;
  font-size: 1.125rem;
  text-align: left;
  cursor: text;
  background: #d1ddfa;
  padding-left: 16px;
  padding-right: 16px;
  display: inline-block;
  height: 48px;
  width: 100%;
  border-radius: 4px;
  border: 0;
  border-color: #999999;
}

.c32:hover {
  background: #bacbf7;
  cursor: text;
}

.c32:focus {
  box-shadow: 0;
  outline: 0;
  background: #bacbf7;
}

.c28 {
  display: inline-block;
  width: 100%;
  border-radius: 1px;
}

.c4 {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c8 {
  list-style: none;
  margin: 0;
  padding: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  border-color: silver;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c10 {
  margin-right: 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c2 {
  outline: 0;
  border: 0;
  background: transparent;
  -webkit-transition: 0.24s ease-in-out;
  transition: 0.24s ease-in-out;
  cursor: pointer;
  display: inline-block;
  position: fixed;
  top: 16px;
  right: 16px;
}

.c2:hover {
  -webkit-transform: scale(1.25);
  -ms-transform: scale(1.25);
  transform: scale(1.25);
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex-basis: 0;
  -ms-flex-preferred-size: 0;
  flex-basis: 0;
  -webkit-box-flex: 999;
  -webkit-flex-grow: 999;
  -ms-flex-positive: 999;
  flex-grow: 999;
  padding-top: 16px;
  margin: 0 0.5rem 0.5rem 0.5rem;
  min-width: 53%;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  max-width: 1440px;
  margin: 0 auto;
}

<div
  class="SidebarLayout__Wrapper-gwfrwp-0 c0"
>
  <div
    class="c1"
  >
    <button
      class="c2"
      display="inline-block"
      role="button"
      type="button"
    >
      <svg
        class="c3"
        fill="none"
        height="24"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          clip-rule="evenodd"
          d="M19.7333 4.2669C19.3776 3.91103 18.801 3.91103 18.4453 4.2669L11.9994 10.7166L5.55552 4.26885C5.19986 3.91299 4.62323 3.91299 4.26757 4.26885C3.91191 4.62472 3.91191 5.20169 4.26757 5.55756L10.7115 12.0053L4.27793 18.4426C3.92228 18.7985 3.92228 19.3755 4.27793 19.7313C4.63359 20.0872 5.21022 20.0872 5.56587 19.7313L11.9994 13.294L18.435 19.7333C18.7906 20.0892 19.3672 20.0892 19.7229 19.7333C20.0786 19.3774 20.0786 18.8005 19.7229 18.4446L13.2874 12.0053L19.7333 5.5556C20.0889 5.19974 20.0889 4.62276 19.7333 4.2669Z"
          fill="#5E26FF"
          fill-rule="evenodd"
        />
      </svg>
    </button>
    <form
      class="c4"
    >
      <div
        class="c5"
        display="flex"
        width="13"
      >
        <div
          class="c6"
        >
          <div
            class="c7"
            display="flex"
            overflow="hidden"
            width="auto"
          >
            <ul
              class="c8"
              display="flex"
              width="100%"
            >
              <div
                class="c9"
                display="flex"
              >
                <li
                  class="c10"
                  display="flex"
                >
                  <div
                    class="c11"
                    color="#000"
                    display="flex"
                    size="6"
                  >
                    <h3
                      class="c12"
                    >
                      Sf
                    </h3>
                  </div>
                </li>
                <li
                  class=""
                >
                  <h2
                    class="c13"
                    font-family="RT-Alias-Grotesk"
                    font-size="4"
                    font-weight="400"
                  >
                    Sending Filecoin
                  </h2>
                </li>
              </div>
              <li
                class=""
              >
                <div
                  class="c14"
                  display="flex"
                >
                  <p
                    class="c15"
                    color="core.nearblack"
                    font-family="RT-Alias-Grotesk"
                    font-size="2"
                    font-weight="400"
                  >
                    Step 
                    1
                  </p>
                  <div
                    class="c16"
                    display="flex"
                  >
                    <div
                      class="c17"
                      display="inline-block"
                      height="2"
                      width="2"
                    />
                  </div>
                  <div
                    class="c16"
                    display="flex"
                  >
                    <div
                      class="c18"
                      display="inline-block"
                      height="2"
                      width="2"
                    />
                  </div>
                  <div
                    class="c16"
                    display="flex"
                  >
                    <div
                      class="c18"
                      display="inline-block"
                      height="2"
                      width="2"
                    />
                  </div>
                  <div
                    class="c16"
                    display="flex"
                  >
                    <div
                      class="c18"
                      display="inline-block"
                      height="2"
                      width="2"
                    />
                  </div>
                </div>
              </li>
            </ul>
            <div
              class="c19"
            >
              <p
                class="c20"
                font-family="RT-Alias-Grotesk"
                font-size="2"
                font-weight="400"
              >
                First, please confirm the account you're sending from, and the recipient you want to send to.
              </p>
            </div>
          </div>
          <div
            class="c21"
          >
            <div
              class="c22"
              color="core.white"
              width="100%"
            >
              <div
                class="c23"
                display="flex"
              >
                <div
                  class="c9"
                  display="flex"
                >
                  <div
                    class="c24"
                    color="white"
                    display="flex"
                    size="6"
                  >
                    <h3
                      class="c12"
                    >
                      Ms
                    </h3>
                  </div>
                  <div
                    class="c25"
                    display="flex"
                  >
                    <p
                      class="c26"
                      font-family="RT-Alias-Grotesk"
                      font-size="2"
                      font-weight="400"
                    >
                      From
                    </p>
                    <p
                      class="c26"
                      font-family="RT-Alias-Grotesk"
                      font-size="2"
                      font-weight="400"
                    >
                      t1z225 ... 6z6wgi
                    </p>
                  </div>
                </div>
                <div
                  class="c25"
                  display="flex"
                >
                  <p
                    class="c26"
                    font-family="RT-Alias-Grotesk"
                    font-size="2"
                    font-weight="400"
                  >
                    Balance
                  </p>
                  <p
                    class="c26"
                    font-family="RT-Alias-Grotesk"
                    font-size="2"
                    font-weight="400"
                  >
                    1
                     FIL
                  </p>
                </div>
              </div>
            </div>
            <div
              class="c27"
              width="100%"
            >
              <div
                class="c28"
              >
                <div
                  class="c16"
                  display="flex"
                >
                  <div
                    class="c29"
                    display="flex"
                  >
                    <h4
                      class="c30"
                      color="core.nearblack"
                      font-family="RT-Alias-Grotesk"
                      font-size="2"
                      font-weight="400"
                    >
                      Recipient
                    </h4>
                  </div>
                  <div
                    class="c31"
                    display="flex"
                  >
                    <input
                      class="c32"
                      display="inline-block"
                      height="6"
                      placeholder="t1..."
                      value=""
                      width="100%"
                    />
                    
                  </div>
                </div>
              </div>
              
            </div>
          </div>
        </div>
        <div
          class="c33"
          display="flex"
          width="13"
        >
          <button
            class="c34"
            font-size="3"
            height="6"
            type="button"
          >
            Back
          </button>
          <button
            class="c35"
            disabled=""
            font-size="3"
            height="6"
            type="submit"
          >
            Next
          </button>
        </div>
      </div>
    </form>
  </div>
</div>
`;
